part2/2.02/todo/frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 5000
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 5000
      - path: /image.jpg
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 5000
      - path: /add-todo
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 5000
